Fixed the price wrapping when the bundle is narrow.

--- a/assets/pages/contributions-landing/contributionsLanding.scss
+++ b/assets/pages/contributions-landing/contributionsLanding.scss
@@ -318,6 +318,10 @@
 	.component-double-heading__heading {
 		font-size: 24px;
 		line-height: 24px;
+
+		@include mq($from: desktop, $until: wide) {
+			padding-bottom: 1px;
+		}
 	}
 
 	.component-double-heading__subheading {
